// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`integration navigates on apply advanced search 1`] = `[MockFunction]`;

exports[`integration navigates on apply advanced search 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "?search=form%3A%28%22Two%22%29%20something%20else",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`integration navigates on apply form filter 1`] = `[MockFunction]`;

exports[`integration navigates on apply form filter 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "?search=form%3A%28%22Two%22%29%20query",
    ],
  ],
  "results": Array [
    Object {
      "type": "return",
      "value": undefined,
    },
  ],
}
`;

exports[`integration navigates on apply question filter 1`] = `[MockFunction]`;

exports[`integration navigates on apply question filter 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "?search=form%3A%28%22Two%22%29%20query",
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`renders as expected (other page) 1`] = `
<div
  className="filters"
>
  <ErrorBoundary
    message="Sorry, something went wrong. Please try reloading the page."
  >
    <AdvancedSearchFilter
      advancedSearchText="query"
      onChangeAdvancedSearch={[Function]}
      onClear={[Function]}
      onSubmit={[Function]}
    />
  </ErrorBoundary>
</div>
`;

exports[`renders as expected (responses page) 1`] = `
<div
  className="filters"
>
  <ErrorBoundary
    message="Sorry, something went wrong. Please try reloading the page."
  >
    <ButtonToolbar>
      <FormFilter
        allForms={
          Array [
            Object {
              "id": "1",
              "name": "One",
            },
            Object {
              "id": "2",
              "name": "Two",
            },
            Object {
              "id": "3",
              "name": "Q\\"uo'te\`s",
            },
          ]
        }
        onClearSelection={[Function]}
        onSelectForm={[Function]}
        onSubmit={[Function]}
        originalFormIds={
          Array [
            "2",
          ]
        }
        selectedFormIds={
          Array [
            "2",
          ]
        }
      />
      <QuestionFilter
        onSubmit={[Function]}
        selectedFormIds={
          Array [
            "2",
          ]
        }
      />
    </ButtonToolbar>
    <AdvancedSearchFilter
      advancedSearchText="query"
      onChangeAdvancedSearch={[Function]}
      onClear={[Function]}
      onSubmit={[Function]}
    />
  </ErrorBoundary>
</div>
`;
